fix text-wrapping bug on CreateAddSuggestions__suggestion style

--- a/client/src/pages/Profile/CreateAdd.module.css
+++ b/client/src/pages/Profile/CreateAdd.module.css
@@ -38,7 +38,7 @@
 }
 
 .CreateAddSuggestions__suggestion {
-  height: 2.4rem;
+  min-height: 2.4rem;
   background-color: var(--grey-extra-dark);
   color: var(--grey-light);
   font-weight: 300;
@@ -47,6 +47,7 @@
   align-items: center;
   gap: 0.3rem;
   padding: 0.25rem 0 0.25rem 0.25rem;
+  overflow-wrap: break-word;
 }
 
 .CreateAddSuggestions__suggestion:hover {
